force-app/main/default/objects/QuestionResponse__c/QuestionResponse__c.object-meta.xml
<CustomObject>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{00000000}</displayFormat>
        <label>Question Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>