force-app/main/default/objects/QuestionResponse__c/fields/IsCorrect__c.field-meta.xml
<CustomField>
    <fullName>IsCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>