force-app/main/default/objects/QuestionResponse__c/fields/IsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>IsSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted</label>
    <type>Checkbox</type>
</CustomField>