force-app/main/default/objects/QuestionResponse__c/fields/ModuleResponse__c.field-meta.xml
<CustomField>
    <fullName>ModuleResponse__c</fullName>
    <label>Module Response</label>
    <referenceTo>ModuleResponse__c</referenceTo>
    <relationshipLabel>Questions Reponses</relationshipLabel>
    <relationshipName>QuestionResponses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>