force-app/main/default/objects/QuestionResponse__c/fields/PartialGradeValue__c.field-meta.xml
<CustomField>
    <fullName>PartialGradeValue__c</fullName>
    <label>Partial Grade Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>