force-app/main/default/objects/QuestionResponse__c/fields/TextValue__c.field-meta.xml
<CustomField>
    <fullName>TextValue__c</fullName>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>