force-app/main/default/objects/QuestionResponse__c/validationRules/CannotChangeModuleResponse.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotChangeModuleResponse</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( ModuleResponse__c )</errorConditionFormula>
    <errorDisplayField>ModuleResponse__c</errorDisplayField>
    <errorMessage>Cannot change the related Module Response.</errorMessage>
</ValidationRule>