force-app/main/default/objects/QuestionResponse__c/validationRules/ValidateAttemptNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAttemptNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(NumberOfAttempt__c)),NumberOfAttempt__c &gt; ModuleResponse__r.Module__r.AttemptsAllowedPerQuestion__c)</errorConditionFormula>
    <errorMessage>You have reached the limit of attempts for this question.</errorMessage>
</ValidationRule>