force-app/main/default/objects/QuestionResponse__c/validationRules/ValidateSameModule.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSameModule</fullName>
    <active>true</active>
    <errorConditionFormula>Question__r.Module__c !=  ModuleResponse__r.Module__c</errorConditionFormula>
    <errorMessage>The related question doesn&#39;t belong to this module.</errorMessage>
</ValidationRule>